# spirits-within

./: .gitignore  Cargo.toml  index.html  index.js  main.js  main.js.map  package-lock.json  package.json
.config/: webpack.common.js  webpack.dev.js  webpack.prod.js
docs/: main.js  main.js.map
renderer/: Cargo.toml
renderer/examples/: main.rs
renderer/src/: lib.rs
spirits-within/: Cargo.toml
spirits-within/src/: character.rs  game.rs  lib.rs
src/: charactor_creator.rs  game.rs  lib.rs  web.rs
