[workspace]
members = [
    "renderer"
]

[package]
name = "spirits-within-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"     # optimize for size

[dependencies]
spirits-within = { path = "../spirits-awaken", package = "spirits-awaken" }
renderer = { path = "./renderer" }
eyre = "0.6"
log = "0.4"
solstice = "0.1"
iced_solstice = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_glutin = "0.3"
iced_winit = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_winit = { version = "0.4", default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
crossbeam-channel = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Crypto"
]